hide code cells etc. + glossary math f

--- a/book/math_foundations/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/lineaire_regressie/gradient.ipynb
@@ -18,7 +18,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "8df417de",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "from ml_courses.sim.derivative_viz import DerivativeVisualization"
@@ -28,7 +32,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "84490a80",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -158,7 +166,7 @@
     "\\begin{align}\n",
     "0 &= 2\\sum_{i=1}^M(y_i-\\hat{b_1}) \\cr\n",
     "0 &= \\sum_{i=1}^M(y_i-\\hat{b_1}) \\cr\n",
-    "0 &= \\sum_{i=1}^My_i -M\\hat{b_1} \\cr\n",
+    "0 &= (\\sum_{i=1}^My_i) - M\\hat{b_1} \\cr\n",
     "M\\hat{b_1} &= \\sum_{i=1}^My_i \\cr\n",
     "\\hat{b_1} &= \\frac{\\sum_{i=1}^My_i}{M}\n",
     "\\end{align}\n",
@@ -173,6 +181,7 @@
    "id": "9b67ba9f",
    "metadata": {},
    "source": [
+    "(partial-target)=\n",
     "## Gradiënt van de $SSE$ met $\\pmb{b} = [b_1, b_2]^T$\n",
     "\n",
     "In het geval van $\\pmb{b} = [b_1, b_2]^T$ neemt de $SSE$ de vorm aan van een oppervlakte (zoals reeds geïllustreerd bij de grid search en monte carlo sampling). We drukken de afgeleide dan ook uit in twee dimensies:\n",
@@ -258,7 +267,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "02227e6f",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -269,7 +282,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "48dbedc3",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -364,7 +381,7 @@
     "\\frac{\\partial SSE}{\\partial b_2} &=\n",
     "\\sum_{i=1}^M2(y_i - b_1 - b_2x_i)(-x_i) \\cr\n",
     "&=\n",
-    "-2\\sum_{i=1}^Mx_i(y_i - b_1 - b_2x_i)\n",
+    "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i)x_i\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -375,7 +392,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "7380f8e5",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -441,7 +462,7 @@
     "$$\n",
     "\\nabla{SSE} = \\begin{bmatrix}\n",
     "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i) \\cr\n",
-    "-2\\sum_{i=1}^Mx_i(y_i - b_1 - b_2x_i)\n",
+    "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i)x_i\n",
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
@@ -453,7 +474,7 @@
     "0\n",
     "\\end{bmatrix} = \\begin{bmatrix}\n",
     "-2\\sum_{i=1}^M(y_i - \\hat{b_1} - \\hat{b_2}x_i) \\cr\n",
-    "-2\\sum_{i=1}^Mx_i(y_i - \\hat{b_1} - \\hat{b_2}x_i)\n",
+    "-2\\sum_{i=1}^M(y_i - \\hat{b_1} - \\hat{b_2}x_i)x_i\n",
     "\\end{bmatrix}\n",
     "$$"
    ]
@@ -463,6 +484,7 @@
    "id": "73325a1e",
    "metadata": {},
    "source": [
+    "(ols-target)=\n",
     "## Gradiënt van de $SSE$ met $\\pmb{b} = [b_1, b_2, ...]^T$\n",
     "\n",
     "In het algemene geval van een $SSE$ met $N$ lineaire predictoren hebben we te maken met een $N$-dimensioneel $SSE$ _hypersurface_. Voor de gradiënt krijgen we:\n",
@@ -504,7 +526,7 @@
     "k = 1, 2, \\ldots, n\n",
     "$$\n",
     "\n",
-    "**Deze vergelijkingen worden de _normal equations_ genoemd** en kunnen als volgt in compacte matrixvorm geschreven worden:\n",
+    "Deze vergelijkingen worden de _normal equations_ genoemd en kunnen als volgt in compacte matrixvorm geschreven worden:\n",
     "\n",
     "$$\n",
     "(\\pmb{X}^T\\pmb{X})\\hat{\\pmb{b}} = \\pmb{X}^T\\pmb{y}\n",
@@ -517,7 +539,7 @@
     "$$\n",
     "\n",
     ":::{important}\n",
-    "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** (_OLS_) oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Deze oplossing is puur analytisch (**_closed form_**) en dus **niet iteratief**.\n",
+    "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** (_OLS_) oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Deze oplossing is puur analytisch; we bekwamen ze louter door te redeneren over de gradiënt van de _loss_ functie. Ze is niet iteratief en wordt ook soms de _closed form_ oplossing voor het lineaire regressiemodel genoemd.\n",
     ":::\n"
    ]
   }
