--- a/book/math_foundations/lineaire_regressie/gradient_descent.ipynb
+++ b/book/math_foundations/lineaire_regressie/gradient_descent.ipynb
@@ -8,9 +8,9 @@
                 "\n",
                 "We zagen tot nu toe dat we parameters van een lineair regressiemodel kunnen schatten via:\n",
                 "\n",
-                "- **_Grid search_**: We zoeken exhaustief een deel van de parameterruimte af naar optimale waarden voor de SSE _loss_. Zeker bij complexere modellen ($\\pmb{b} = \\begin{bmatrix}b_1, b_2, \\ldots, b_n\\end{bmatrix}$) is dit praktisch onhaalbaar.\n",
-                "- **_Monte Carlo sampling_**: Hier leveren we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. Dit levert zelfs bij simpele modellen geen stabiele resultaten op.\n",
-                "- **_Ordinary least squares_** (_OLS_): Deze puur analytische oplossing kan in één keer een optimale oplossing opleveren (in de _least squares_ zin), maar kan onstabiele resultaten opleveren wanneer er sprake is van multicollineariteit.\n",
+                "- _Grid search_: We zoeken exhaustief een deel van de parameterruimte af naar optimale waarden voor de SSE _loss_. Zeker bij complexere modellen ($\\pmb{b} = \\begin{bmatrix}b_1, b_2, \\ldots, b_n\\end{bmatrix}$) is dit praktisch onhaalbaar.\n",
+                "- _Monte Carlo sampling_: Hier leveren we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. Dit levert zelfs bij simpele modellen geen stabiele resultaten op.\n",
+                "- _Ordinary least squares_ (_OLS_): Deze puur analytische oplossing kan in één keer een optimale oplossing opleveren (in de _least squares_ zin), maar kan onstabiele resultaten opleveren wanneer er sprake is van multicollineariteit.\n",
                 "\n",
                 "In deze sectie bespreken we een populair alternatief: **_gradient descent_**. Zeker in de context van complexere ML modellen (bv. neurale netwerken) biedt deze oplossing (en aanverwanten) een stabieler alternatief. Zoals de naam zelf suggereert, maakt de _gradient descent_ oplossing, net zoals OLS gebruik van de gradiënt. Het is echter net zoals bij Monte Carlo sampling een iteratief, en dus geen _closed form_, leeralgoritme.\n",
                 "\n",
@@ -41,9 +41,10 @@
                 "- **bij iedere update, verschuiven we _alle_ parameterwaarden in de richting van de sterkste daling van de _loss_ functie**\n",
                 "- **de grootte van de update wordt bepaald als een fractie van de gradiënt (of de individuele partiële afgeleiden), gecontroleerd door de _learning rate_ $\\lambda$**\n",
                 "\n",
-                "Het algoritme maakt ten slotte ook gebruik van een **_stopping rule_** om te bepalen wanneer de winst qua daling in the _loss_ klein genoeg is geworden om de iteraties stop te zetten.\n",
+                "Het algoritme maakt ten slotte ook gebruik van een _stopping rule_ om te bepalen wanneer de winst qua daling in the _loss_ klein genoeg is geworden om de iteraties stop te zetten.\n",
                 "\n",
                 "::: {note}\n",
+                ":class: dropdown\n",
                 "Om de formule beter te begrijpen kunnen we ons een situatie voorstellen waarbij de _learning rate_ $1$ is en:\n",
                 "1. _de partiële afgeleide $1$ is_: de raaklijn stijgt met een slope $1$ van links naar rechts op de schaal van onze parameter $b_i$\n",
                 "2. _de partiële afgeleide $-1$ is_: de raaklijn daalt met een slope $-1$ van links naar rechts op de schaal van onze parameter $b_i$  \n",
@@ -56,7 +57,11 @@
         {
             "cell_type": "code",
             "execution_count": 1,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import numpy as np\n",
@@ -1283,7 +1288,11 @@
         {
             "cell_type": "code",
             "execution_count": 5,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -2144,7 +2153,11 @@
         {
             "cell_type": "code",
             "execution_count": 6,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -3005,7 +3018,11 @@
         {
             "cell_type": "code",
             "execution_count": 7,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -3886,7 +3903,11 @@
         {
             "cell_type": "code",
             "execution_count": 8,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -4807,7 +4828,7 @@
                 "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k, \\mathcal{B}^k)\n",
                 "$$\n",
                 "\n",
-                "waarbij $\\mathcal{B}^k$ een **_mini-batch_** is: een willekeurige subset van de trainingsdata bij iteratie $k$.\n",
+                "waarbij $\\mathcal{B}^k$ een _mini-batch_ is: een willekeurige subset van de trainingsdata bij iteratie $k$.\n",
                 "\n",
                 "### Voordelen van SGD\n",
                 "- Sneller bij grote datasets: Door niet alle observaties te gebruiken bij elke update, is SGD veel sneller dan reguliere _gradient descent_, vooral bij grote datasets.\n",
@@ -4833,7 +4854,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.18"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
