--- a/book/math_foundations/lineaire_regressie/glm.ipynb
+++ b/book/math_foundations/lineaire_regressie/glm.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# _Generalized linear models_\n",
     "\n",
-    "Stel dat we te maken hebben met een target variabele die in plaats van een continue waarde (bv. hoeveelheid fooi), **binair** is (bv. laat iemand een tip achter $[1]$ of niet $[1]$). In een dergelijke situatie zouden we nog steeds predicties willen kunnen maken op basis van een lineaire combinatie van features/predictoren, maar we kunnen een standaard lineair regressie model niet zomaar toepassen. Dat model houdt enkel rekening met continue targetvariabele, dus met predicties die groter dan $1$ of kleiner dan $0$. Een oplossing hiervoor is om het lineaire model via een speciale niet-lineaire functie te _linken_ aan de target waarden ($0$ of $1$ in het binaire geval). Om predicties te mappen op binaire outputs wordt een **sigmoidale** (S-vormige) functie gebruikt zoals de **logistische** functie. In dit laatste geval spreken we over **logistische regressie**. In het algemene geval waarbij we lineaire predicties mappen op niet-continue targetvariabelen via een welbepaalde linkfunctie spreekt men van **_generalized linear models_** (GLM). Hier gaan we enkel verder in op _logistische regressie_ omdat het een aanzet geeft naar de parameter schattingen bij neurale netwerken.\n",
+    "Stel dat we te maken hebben met een target variabele die in plaats van een continue waarde (bv. hoeveelheid fooi), _binair_ is (bv. laat iemand een tip achter $[1]$ of niet $[1]$). In een dergelijke situatie zouden we nog steeds predicties willen kunnen maken op basis van een lineaire combinatie van features/predictoren, maar we kunnen een standaard lineair regressie model niet zomaar toepassen. Dat model houdt enkel rekening met continue targetvariabele, dus met predicties die groter dan $1$ of kleiner dan $0$. Een oplossing hiervoor is om het lineaire model via een speciale niet-lineaire functie te _linken_ aan de target waarden ($0$ of $1$ in het binaire geval). Om predicties te mappen op binaire outputs wordt een _sigmoid_ (S-vormige) functie gebruikt zoals de logistische functie. In dit laatste geval spreken we over **logistische regressie**. In het algemene geval waarbij we lineaire predicties mappen op niet-continue targetvariabelen via een welbepaalde link-functie spreekt men van _generalized linear models_ (GLM). Hier gaan we enkel verder in op _logistische regressie_ omdat het een aanzet geeft naar de parameter schattingen bij neurale netwerken.\n",
     "\n",
     "## Logistische regressie\n",
     "\n",
@@ -24,7 +24,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "11ad9f87",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -38,7 +42,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "265c1f3b",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -162,7 +170,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b6770cc0",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -358,7 +370,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "7e74a960",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -501,7 +517,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "18566f78",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -845,7 +865,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "747833c6",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
