--- a/book/math_foundations/lineaire_regressie/monte_carlo.ipynb
+++ b/book/math_foundations/lineaire_regressie/monte_carlo.ipynb
@@ -19,7 +19,11 @@
             "cell_type": "code",
             "execution_count": 1,
             "id": "cbf47075",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import matplotlib.pyplot as plt\n",
@@ -32,7 +36,11 @@
             "cell_type": "code",
             "execution_count": 2,
             "id": "5bafec77",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "name": "stdout",
@@ -158,7 +166,11 @@
             "cell_type": "code",
             "execution_count": 3,
             "id": "visualization_cell",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -1272,7 +1284,11 @@
             "cell_type": "code",
             "execution_count": 4,
             "id": "99e894b7",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "name": "stdout",
@@ -1317,7 +1333,11 @@
             "cell_type": "code",
             "execution_count": 5,
             "id": "a49e82c0",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -1417,7 +1437,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.18"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
