--- a/book/math_foundations/lineaire_regressie/ols.ipynb
+++ b/book/math_foundations/lineaire_regressie/ols.ipynb
@@ -22,7 +22,11 @@
         {
             "cell_type": "code",
             "execution_count": 1,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import matplotlib.pyplot as plt\n",
@@ -99,7 +103,11 @@
         {
             "cell_type": "code",
             "execution_count": 5,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -161,8 +169,9 @@
                 "## Voordeel\n",
                 "Optimale parameterwaarden op basis van SSE _loss_ via één _batch_ berekening.\n",
                 "\n",
+                "(multic-target)=\n",
                 "## Nadeel\n",
-                "De _ordinary least squares_ oplossing heeft een belangrijke beperking: **we moeten de matrix $(\\pmb{X}^T\\pmb{X})^{-1}$ kunnen berekenen**. Dit vereist dat $\\pmb{X}^T\\pmb{X}$ **_volledig van rang_** is.\n",
+                "De _ordinary least squares_ oplossing heeft een belangrijke beperking: **we moeten de matrix $(\\pmb{X}^T\\pmb{X})^{-1}$ kunnen berekenen**. Dit vereist dat $\\pmb{X}^T\\pmb{X}$ _volledig van rang_ is.\n",
                 "\n",
                 "$\\pmb{X}^T\\pmb{X}$ is niet inverteerbaar (**\"singulier\"**) bij:\n",
                 "\n",
@@ -180,7 +189,7 @@
                 "Singulariteit of het risico op onstabiliteit kan gediagnosticeerd worden aan de hand van het zogeheten [_conditienummer_](https://en.wikipedia.org/wiki/Condition_number).\n",
                 "  \n",
                 "Oplossingen:\n",
-                "- **Regularisatie** (Ridge, Lasso): Het toevoegen van een _penalty_ zoals $\\lambda\\pmb{I}$ (met $\\lambda\\geq0$) maakt $\\pmb{X}^T\\pmb{X} + \\lambda\\pmb{I}$ inverteerbaar.\n",
+                "- Regularisatie (Ridge, Lasso): Het toevoegen van een _penalty_ zoals $\\lambda\\pmb{I}$ (met $\\lambda\\geq0$) maakt $\\pmb{X}^T\\pmb{X} + \\lambda\\pmb{I}$ inverteerbaar.\n",
                 "- Feature selectie: Verwijderen van redundante of _collinear features_.\n",
                 "- Dimensionaliteitsreductie: PCA of andere technieken.\n",
                 "- Pseudo-inverse: Het gebruik van de _Moore-Penrose pseudo-inverse_.\n",
