--- a/book/ml_principles/basis/ml.ipynb
+++ b/book/ml_principles/basis/ml.ipynb
@@ -6,7 +6,7 @@
             "metadata": {},
             "source": [
                 "# Machine Learning\n",
-                "Machine learning (of machinaal leren; ML) is een specifieke benadering binnen de artificiële intelligentie (AI). De focus ligt op wiskundige algoritmes om complexe patronen/structuren in **data** te **leren** herkennen en/of te reproduceren. De bedoeling is om software systemen te creëren die **voorspellingen** kunnen maken en/of **acties** kunnen ondernemen **zonder expliciete instructies te programmeren**.  \n",
+                "**_Machine learning_** (of machinaal leren; ML) is een specifieke benadering binnen de artificiële intelligentie (AI). De focus ligt op **wiskundige algoritmes om complexe _patronen/structuren_ in data te leren _herkennen_ en/of te _reproduceren_**. De bedoeling is om software systemen te creëren die **_voorspellingen_ kunnen maken en/of _acties_ kunnen ondernemen _zonder expliciete instructies te programmeren_**.  \n",
                 "  \n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
@@ -25,7 +25,7 @@
                 "1. Model training\n",
                 "2. Model inference\n",
                 "\n",
-                "Om die goed te begrijpen, moeten we eerst het concept van een **machine learning _model_** toelichten.\n",
+                "Om die goed te begrijpen, moeten we eerst het concept van een machine learning _model_ toelichten.\n",
                 "\n",
                 "\n",
                 ":::{tip} ML & AI\n",
@@ -39,20 +39,28 @@
         },
         {
             "cell_type": "markdown",
+            "id": "762edc03",
+            "metadata": {},
+            "source": [
+                "#### Datasimulatie\n",
+                "Om de principes van Machine Learning goed te leren vatten is het vaak nuttig om simulaties te doen.\n",
+                "Zo kunnen we zelf geïdealiseerde datasets maken, met patronen die we zelf maken. We hebben dus een perfecte beschrijving van _de manier waarop de data tot stand kwamen_. "
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "id": "655a4b02",
             "metadata": {},
             "source": [
-                ":::{tip} Simulatie\n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
                 ":class: simple\n",
-                "Om de principes van Machine Learning goed te leren vatten is het vaak nuttig om simulaties te doen.\n",
-                "Zo kunnen we zelf geïdealiseerde datasets maken, met patronen die we zelf maken. We hebben dus een perfecte beschrijving van _de manier waarop de data tot stand kwamen_.  \n",
-                "  \n",
                 "Hieronder simuleren we een dataset met $\\beta$ waarden voor het airco voorbeeld. We bouwen het volgende patroon in:\n",
                 "\n",
-                "- **Winter/Lente**: Hogere gemiddelde $\\beta$-waarden (mensen willen het warmer binnen als het koud is buiten)\n",
-                "- **Zomer/Herfst**: Lagere gemiddelde $\\beta$-waarden (mensen tolereren koelere temperaturen binnen als het warm is buiten)\n",
-                "- **Zomer**: Hogere variabiliteit (meer onenigheid over comfort door wisselende buitencondities)\n",
-                "- **Winter**: Lagere variabiliteit (meer consensus over gewenste binnenwarmte)\n",
+                "- _Winter/Lente_: Hogere gemiddelde $\\beta$-waarden (mensen willen het warmer binnen als het koud is buiten)\n",
+                "- _Zomer/Herfst_: Lagere gemiddelde $\\beta$-waarden (mensen tolereren koelere temperaturen binnen als het warm is buiten)\n",
+                "- _Zomer_: Hogere variabiliteit (meer onenigheid over comfort door wisselende buitencondities)\n",
+                "- _Winter_: Lagere variabiliteit (meer consensus over gewenste binnenwarmte)\n",
                 ":::"
             ]
         },
@@ -60,7 +68,11 @@
             "cell_type": "code",
             "execution_count": 15,
             "id": "5dc83262",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "from datetime import datetime\n",
@@ -74,7 +86,11 @@
             "cell_type": "code",
             "execution_count": 16,
             "id": "c2f3e4d5",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "name": "stdout",
@@ -144,7 +160,11 @@
             "cell_type": "code",
             "execution_count": 14,
             "id": "d3f4e5d6",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -314,7 +334,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.18"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
