--- a/book/ml_principles/basis/modellen.ipynb
+++ b/book/ml_principles/basis/modellen.ipynb
@@ -7,8 +7,8 @@
             "source": [
                 "# Modellen\n",
                 "\n",
-                "Om patronen in data te herkennen met machine learning gaan we steeds vertrekken vanuit een *idee over\n",
-                "de manier waarop data en variaties in data in een specifiek geval tot stand komen*. Dat idee wordt wiskundig geformaliseerd in een (data) model.\n",
+                "Om patronen in data te herkennen met machine learning gaan we steeds vertrekken vanuit een _idee over\n",
+                "de manier waarop data en variaties in data in een specifiek geval tot stand komen_. Dat idee wordt wiskundig geformaliseerd in een (data) model.\n",
                 "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
@@ -26,15 +26,15 @@
                 "Het patroon in de data waar we naar op zoek zijn is simpelweg gegeven door de *parameter* $b$.\n",
                 ":::\n",
                 "\n",
-                "**Een model is de formele wiskundige beschrijving van de manier waarop data en data-variaties in een specifiek geval tot stand komen.**  \n",
-                "De keuze van ons model hangt rechtstreeks samen met de keuze van het leeralgoritme.\n",
+                "**Een model is de formele wiskundige beschrijving van de manier waarop data en data-variaties in een specifiek geval tot stand komen**. Wanneer we een dergelijke beschrijving in handen hebben, kunnen we voorspellen welke data _in de toekomst_ tot stand zal komen en dat is het ultieme doel van machine learning.   \n",
                 "\n",
-                ":::{note} 🌍\n",
-                ":icon: false\n",
-                ":class: simple \n",
-                "Het model waarbij alle data het resultaat is van de som van een ideale waarde $b$ en een hoeveelheid ruis, impliceert dat $E(d_i) = b$.\n",
-                "Om het patroon $b$ te achterhalen of \"leren\" op basis van de data, kiezen we een algoritme om de verwachte waarde van $d_i$ te *benaderen*.\n",
-                "In dit geval kiezen we voor een heel simpel leeralgoritme: het *steekproef gemiddelde* van de geobserveerde voorkeurstemperaturen.\n",
+                "::: {important}\n",
+                "Een model is altijd een sterk **vereenvoudigde beschrijving van de data** omdat\n",
+                "1. we nooit over alle informatie beschikken om perfect te weten hoe de data tot stand zijn gekomen, \n",
+                "2. we nooit over alle data kunnen beschikken om het perfecte model te trainen en \n",
+                "3. het praktische nut, qua schaalbaarheid en transparantie, des te groter wordt naarmate we over een zo eenvoudig mogelijk, maar performant model beschikken.   \n",
+                "  \n",
+                "Zoals we zullen zien, nemen modellen heel diverse vormen aan, naargelang het specifieke domein/probleem waarvoor ze geschikt zijn. Het is ook zo dat voor een gegeven taak, er vaak verschillende types modellen gebruikt kunnen worden - elk met zijn eigen voor- en nadelen. Hoewel in veel domeinen een bepaald type model dominant is, blijft **modelkeuze** vaak een belangrijke stap in de ontwikkeling van machine learning systemen. Die keuze hangt sterk samen met de keuze van het **leeralgoritme**. Het **leeralgoritme verwijst naar de specifieke techniek die gebruikt wordt om door middel van het model patronen te leren herkennen** (of zoals we binnenkort zullen zien: \"_de model parameters te schatten_\").\n",
                 ":::"
             ]
         }
