--- a/book/ml_principles/basis/parameters.ipynb
+++ b/book/ml_principles/basis/parameters.ipynb
@@ -8,26 +8,44 @@
                 "\n",
                 "# Parameters\n",
                 "\n",
-                "Modellen variëren sterk naargelang de complexiteit van hun beschrijving van de data, of, anders gezegd, de complexiteit van de patronen die in de data verondersteld worden.\n",
-                "Die complexiteit vertaalt zich in het aantal parameters.  \n",
-                "Parameters gedragen zich zoals functie-argumenten, ze maken de voorspellingen of acties die we maken op basis van het model veranderlijk.  \n",
-                "- **Model parameters zijn het geheel van onbekende waarden in het model die afgeleid/geschat/geleerd dienen te worden uit de data.**  \n",
-                "- **De hoeveelheid parameters in een model bepaalt de _model complexiteit_.**   \n",
+                "Modellen geven zoals gezegd, een _wiskundige beschrijving_ van de manier waarop data in een bepaalde context (volgens ons) tot stand komen. Die beschrijving bestaat concreet uit een verzameling van\n",
+                "- _wiskundige functies_ ($f$) en \n",
+                "- _argumenten_ ($a$) voor die functies\n",
+                "\n",
+                "$$\n",
+                "\\{f_1(a_{1,1}, a_{1,2}, \\ldots), f_2(a_{2,1}, a_{2,2}, \\ldots), \\ldots\\}\n",
+                "$$  \n",
                 "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple \n",
-                "In het airco voorbeeld, is er in het simpele model \n",
-                "$$\n",
-                "\\begin{aligned}\n",
-                "d_i &= b + e_i \\\\\n",
-                "E(e_i) &= 0\n",
-                "\\end{aligned}\n",
-                "$$\n",
-                "slechts één parameter: $b$\n",
+                "In het airco voorbeeld, is er in het simpele model $d_i = b + e_i$ slechts één functie $f$ met twee argumenten ($b$ en $e_i$):\n",
                 "\n",
-                "We kunnen echter een stap verder zetten en veronderstellen dat er nog steeds een zelfde ideale drempelwaarde bestaat voor alle gebruikers,\n",
-                "maar dat die verschilt per seizoen (zie simulatie). We kunnen ons model dan uitbreiden naar vier parameters:\n",
+                "$$\n",
+                "d_i = f(b, e_i)\n",
+                "$$\n",
+                "\n",
+                "met als simpele beschrijving:\n",
+                "\n",
+                "$$\n",
+                "f(b, e_i) = b + e_i\n",
+                "$$\n",
+                ":::\n",
+                "\n",
+                "We maken in machine learning een onderscheid tussen **twee types argumenten**:\n",
+                "1. _gekende_ waarden van inputvariabelen\n",
+                "2. _onbekende_ **parameters**\n",
+                "\n",
+                "**Het objectief van machine learning is om de onbekende parameters te achterhalen. Parameters bepalen namelijk het numerieke patroon dat achter de datageneratie zit**. Dat patroon willen we te weten komen om voorspellingen over nieuwe data te kunnen maken. Dat gebeurt aan de hand van een bepaald leeralgoritme dat op zoek gaat naar de optimale oplossing voor de parameters.   \n",
+                "\n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: simple \n",
+                "In het simpele airco model heeft de modelfunctie $f(b, e_i)$ enkel _onbekende_ parameters als argumenten: $b$ en $e_i$. Om voorspellingen te maken over toekomstige data (ideale drempelwaarden) willen we \"het patroon $b$\" te weten komen aan de hand van de verzamelde data. In dit geval is de voorspelling voor $e_i$ altijd $0$ omdat we in het model hebben ingebouwd dat de verwachtte waarde $E(e_i) = 0$.\n",
+                "\n",
+                "_Seizoensparameters_  \n",
+                "We zouden bij de keuze van ons model een stap verder kunnen gaan en veronderstellen dat er nog steeds een zelfde ideale drempelwaarde bestaat voor alle gebruikers,\n",
+                "maar dat die verschilt per seizoen (zie [datasimulatie](ml.ipynb#datasimulatie)). We passen het model dus aan door een _onbekend patroon over seizoenen_ inbouwen. We kunnen ons model dan als volgt uitdrukken:\n",
                 "$$\n",
                 "\\begin{aligned}\n",
                 "d_{i,w} &= b_w + e_i \\\\\n",
@@ -37,25 +55,44 @@
                 "E(e_i) &= 0\n",
                 "\\end{aligned}\n",
                 "$$\n",
-                "waarbij $b_w$, $b_l$, $b_z$ en $b_h$ de seizoensspecifieke ideale drempelwaardes zijn voor, respectievelijk, winter, lente, zomer en herfst.\n",
+                "waarbij $b_w$, $b_l$, $b_z$ en $b_h$ de seizoensspecifieke ideale drempelwaardes zijn voor, respectievelijk, winter, lente, zomer en herfst. Zij vormen de parameters die we te weten willen komen. Ze drukken het seizoensspecifieke patroon uit. We hebben in dit geval een complexere modelfunctie:\n",
+                "\n",
+                "$$\n",
+                "f(b_w, b_l, b_z, b_h, e_i, S) = \\begin{cases}\n",
+                "b_w + e_i & \\text{if } S = \\text{winter} \\\\\n",
+                "b_l + e_i & \\text{if } S = \\text{lente} \\\\\n",
+                "b_z + e_i & \\text{if } S = \\text{zomer} \\\\\n",
+                "b_h + e_i & \\text{if } S = \\text{herfst}\n",
+                "\\end{cases}\n",
+                "$$\n",
+                "\n",
+                "💡 Naast de onbekende functie-argumenten (of parameters) $b_w$, $b_l$, $b_z$, $b_h$ en $e_i$ krijgen we hier nu ook een voorbeeld van _gekend functie-argument_, namelijk het seizoen $S$ waarvan een bepaald datapunt afkomstig is.\n",
                 ":::\n",
+                "\n",
+                "\n",
+                "Parameters zijn onbekende functie-argumenten in de wiskundige beschrijving van de data die door ons model wordt gegeven.  \n",
+                "- **Model parameters zijn het geheel van onbekende functie-argumenten in het model die afgeleid/geschat/geleerd dienen te worden uit de data.**\n",
+                "- **We achterhalen de optimale waarden voor model parameters aan de hand van een bepaald leeralgoritme.**\n",
+                "- **Model parameters bepalen de numerieke patronen die achter de datageneratie zit.**  \n",
+                "- **De hoeveelheid parameters in een model bepaalt de _model complexiteit_.**   \n",
+                "\n",
                 "\n",
                 "![box](../../../img/all_models_are_wrong.jpg)  \n",
                 "  \n",
-                "Deze bekende uitspraak verwijst naar het feit dat we nooit in staat zijn om een volledig juiste theorie te hebben over hoe data tot stand zijn gekomen. En als we die al zouden hebben, zou die zoveel parameters bevatten dat we nooit voldoende data kunnen verzamelen om die allemaal **voldoende betrouwbaar te schatten**.  \n",
+                "Deze bekende uitspraak verwijst naar het feit dat we nooit in staat zijn om een volledig juiste theorie te hebben over hoe data tot stand zijn gekomen. En als we die al zouden hebben, zou die zoveel parameters bevatten dat we nooit voldoende data kunnen verzamelen om die allemaal voldoende betrouwbaar te schatten via ons leeralgoritme.  \n",
                 "  \n",
-                "**Hoe complex we ons model _kunnen_ maken, hangt af van de hoeveelheid beschikbare data/informatie.**  \n",
-                "Het kan zijn dat bepaalde informatie gewoonweg niet beschikbaar is.\n",
+                "Hoe complex we ons model _kunnen_ maken, hangt af van de hoeveelheid beschikbare data/informatie.  \n",
+                "Het kan zijn dat bepaalde informatie gewoonweg niet beschikbaar is.  \n",
+                "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple \n",
                 "Stel dat we in het geval de airco niet beschikken over tijdsinformatie, dan kunnen we gewoonweg seizoensinformatie niet in rekening brengen in ons model.\n",
                 ":::\n",
                 "\n",
-                "Anderzijds, kan het zijn dat we gewoonweg over te weinig observaties of metingen beschikken om een _statistisch betrouwbare_ schatting te maken.\n",
-                "Zie illustratie van de _Law of large numbers_\n",
+                "Anderzijds, kan het zijn dat we gewoonweg over _te weinig observaties of metingen beschikken_ om een _betrouwbare_ schatting te maken. Zie illustratie van de _Law of large numbers_.\n",
                 "\n",
-                "**Hoe complex we ons model _willen_ maken, hangt af van de use case.**\n",
+                "Hoe complex we ons model _willen_ maken, hangt af van de _use case_.\n",
                 "Zeker in een product-context, is het algemeen aangeraden om zuinig te zijn met parameters:\n",
                 "- Je moet meer data verzamelen vooraleer je kan beginnen leren (trainen)\n",
                 "- Het leerproces (training) wordt complexer en onstabieler"
@@ -68,16 +105,16 @@
             "source": [
                 ":::{tip} Illustratie\n",
                 ":class: simple\n",
-                "Deze illustratie toont hoe het steekproefgemiddelde convergeert naar het populatiegemiddelde naarmate de steekproefgrootte toeneemt. Dit fundamentele concept staat bekend als de **Law of Large Numbers**.\n",
+                "Stel dat we het werkelijke (of populatie-)gemiddelde van een bepaalde variabele willen _schatten_ aan de hand van een steekproef van waarden. Deze illustratie toont hoe het steekproefgemiddelde convergeert naar het populatiegemiddelde naarmate de steekproefgrootte toeneemt. Dit fundamentele concept staat bekend als de _Law of Large Numbers_. Het toont het belang aan van steekproefgroottes om _betrouwbare_ schattingen te maken op basis van data.\n",
                 "\n",
-                "**Kernconcepten**:\n",
-                "- **Populatiegemiddelde (μ)**: Het werkelijke gemiddelde van de gehele populatie\n",
-                "- **Steekproefgemiddelde (x̄)**: Het gemiddelde van een eindige steekproef uit de populatie\n",
-                "- **Convergentie**: Naarmate de steekproefgrootte toeneemt, benadert het steekproefgemiddelde het populatiegemiddelde\n",
+                "Kernconcepten:\n",
+                "- Populatiegemiddelde (μ): Het werkelijke gemiddelde van de gehele populatie\n",
+                "- Steekproefgemiddelde (x̄): Het gemiddelde van een eindige steekproef uit de populatie\n",
+                "- Convergentie: Naarmate de steekproefgrootte toeneemt, benadert het steekproefgemiddelde het populatiegemiddelde\n",
                 "\n",
                 "De visualisatie hieronder toont:\n",
-                "- **Linker paneel**: Een hypothetische Gauss verdeling die aan de basis ligt van de observaties\n",
-                "- **Rechter paneel**: Hoe het cumulatieve steekproefgemiddelde convergeert naar het werkelijke populatiegemiddelde\n",
+                "- Linker paneel: Een hypothetische Gauss verdeling die aan de basis ligt van de observaties\n",
+                "- Rechter paneel: Hoe het cumulatieve steekproefgemiddelde convergeert naar het werkelijke populatiegemiddelde\n",
                 ":::"
             ]
         },
@@ -85,7 +122,11 @@
             "cell_type": "code",
             "execution_count": null,
             "id": "fe7ef644",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import matplotlib.pyplot as plt\n",
@@ -102,7 +143,11 @@
             "cell_type": "code",
             "execution_count": 4,
             "id": "205dc9d7",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
