Add target references and improve formatting in multiple notebooks

--- a/book/ml_principles/basis/features.ipynb
+++ b/book/ml_principles/basis/features.ipynb
@@ -32,7 +32,8 @@
                 "\n",
                 "De parameters $b_w, b_l, b_z$ en $b_h$ zijn elk gelinkt aan het feit of de observatie in een bepaald seizoen werd gemaakt. Dat wordt _gegeven_ door de input variabele $S$ die in de data aanwezig moet zijn.\n",
                 ":::\n",
-                "\n",
+                "  \n",
+                "(target-features)=\n",
                 "Het linken van parameters aan inputvariabelen gebeurt via **features**. Deze geven **een numerieke uitdrukking aan één of meerdere inputvariabelen zodat ze wiskundig aan de overeenkomstige modelparameter(s) kunnen worden gekoppeld**.  \n",
                 "  \n",
                 "```\n",
@@ -111,9 +112,11 @@
                 ":::\n",
                 "\n",
                 "## Feature engineering\n",
+                "(target-feature-engineering)=\n",
                 "Het proces waarbij we de link leggen tussen model parameters en de data aan de hand van features noemen we **feature engineering**.\n",
                 "Wanneer we zelf op maat modellen uitwerken voor bepaalde patroonherkenning, gaan we soms heel veel tijd in dit proces steken.\n",
                 "Er zijn vaak verschillende keuzes die gemaakt kunnen worden over hoe we precies bepaalde informatie in de data projecteren op de parameters via de features. Die keuzes kunnen bepalend zijn voor de mogelijkheid om bepaalde patronen te leren.\n",
+                "  \n",
                 "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
