--- a/book/ml_principles/basis/modellen.ipynb
+++ b/book/ml_principles/basis/modellen.ipynb
@@ -26,6 +26,7 @@
                 "Het patroon in de data waar we naar op zoek zijn is simpelweg gegeven door de *parameter* $b$.\n",
                 ":::\n",
                 "\n",
+                "(target-model)=\n",
                 "**Een model is de formele wiskundige beschrijving van de manier waarop data en data-variaties in een specifiek geval tot stand komen**. Wanneer we een dergelijke beschrijving in handen hebben, kunnen we voorspellen welke data _in de toekomst_ tot stand zal komen en dat is het ultieme doel van machine learning.   \n",
                 "\n",
                 "::: {important}\n",
@@ -34,6 +35,7 @@
                 "2. we nooit over alle data kunnen beschikken om het perfecte model te trainen en \n",
                 "3. het praktische nut, qua schaalbaarheid en transparantie, des te groter wordt naarmate we over een zo eenvoudig mogelijk, maar performant model beschikken.   \n",
                 "  \n",
+                "(target-modelkeuze)=\n",
                 "Zoals we zullen zien, nemen modellen heel diverse vormen aan, naargelang het specifieke domein/probleem waarvoor ze geschikt zijn. Het is ook zo dat voor een gegeven taak, er vaak verschillende types modellen gebruikt kunnen worden - elk met zijn eigen voor- en nadelen. Hoewel in veel domeinen een bepaald type model dominant is, blijft **modelkeuze** vaak een belangrijke stap in de ontwikkeling van machine learning systemen. Die keuze hangt sterk samen met de keuze van het **leeralgoritme**. Het **leeralgoritme verwijst naar de specifieke techniek die gebruikt wordt om door middel van het model patronen te leren herkennen** (of zoals we binnenkort zullen zien: \"_de model parameters te schatten_\").\n",
                 ":::"
             ]
