--- a/book/ml_principles/basis/parameters.ipynb
+++ b/book/ml_principles/basis/parameters.ipynb
@@ -68,13 +68,13 @@
                 "\n",
                 "💡 Naast de onbekende functie-argumenten (of parameters) $b_w$, $b_l$, $b_z$, $b_h$ en $e_i$ krijgen we hier nu ook een voorbeeld van _gekend functie-argument_, namelijk het seizoen $S$ waarvan een bepaald datapunt afkomstig is.\n",
                 ":::\n",
-                "\n",
-                "\n",
-                "Parameters zijn onbekende functie-argumenten in de wiskundige beschrijving van de data die door ons model wordt gegeven.  \n",
+                "  \n",
+                "Parameters zijn onbekende functie-argumenten in de wiskundige beschrijving van de data die door ons model wordt gegeven.\n",
+                "(target-parameters)=  \n",
                 "- **Model parameters zijn het geheel van onbekende functie-argumenten in het model die afgeleid/geschat/geleerd dienen te worden uit de data.**\n",
                 "- **We achterhalen de optimale waarden voor model parameters aan de hand van een bepaald leeralgoritme.**\n",
                 "- **Model parameters bepalen de numerieke patronen die achter de datageneratie zit.**  \n",
-                "- **De hoeveelheid parameters in een model bepaalt de _model complexiteit_.**   \n",
+                "- **De hoeveelheid parameters in een model bepaalt de _modelcomplexiteit_.**   \n",
                 "\n",
                 "\n",
                 "![box](../../../img/all_models_are_wrong.jpg)  \n",
