--- a/book/ml_principles/basis/ml.ipynb
+++ b/book/ml_principles/basis/ml.ipynb
@@ -6,8 +6,9 @@
             "metadata": {},
             "source": [
                 "# Machine Learning\n",
+                "(target-ml)=\n",
                 "**_Machine learning_** (of machinaal leren; ML) is een specifieke benadering binnen de artificiële intelligentie (AI). De focus ligt op **wiskundige algoritmes om complexe _patronen/structuren_ in data te leren _herkennen_ en/of te _reproduceren_**. De bedoeling is om software systemen te creëren die **_voorspellingen_ kunnen maken en/of _acties_ kunnen ondernemen _zonder expliciete instructies te programmeren_**.  \n",
-                "  \n",
+                "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple \n",
